trying fixed margins on mobile

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -172,9 +172,29 @@ header {
     }
 
     .upper-div {
-        
+
         max-height: 70%;
-        
+
+    }
+}
+
+@media (max-width:800px) {
+    #wrapper {
+        background-image: url('/images/backgroundMobile.jpg');
+    }
+
+    .upper-div {
+        max-height: 60%;
+    }
+
+    .center-div {
+        margin: 20em auto;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        width: 30%;
+        max-height: 25%;
     }
 }
 
